--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,3 +15,15 @@ body {
     width: 100%;
     background: rgba(0,0,0,0.6);
 }
+.f-bot {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 30px;
+}
+ul { 
+    list-style-type: none;
+}
